# JudgementCall

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  not match the project environment path and will be ignored  pyproject.toml
.github/workflows/: lint.yml  tests.yml
apps/app_name/: models.py
apps/app_name/management/commands/: ingest.py
apps/judgement-call/: apps.py  tests.py  views.py
apps/judgement_call/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
apps/judgement_call/management/commands/: ingest.py
apps/judgement_call/migrations/: 0001_initial.py  0002_alter_person_name_alias_alter_person_name_canonical.py  0003_remove_court_state.py  0004_alter_candidacy_options_remove_case_pro_con_and_more.py  0005_remove_person_name_alias.py
config/: settings.py  urls.py
data/: cases_scdb.csv  judges_slri.csv  prototype_cases.csv  prototype_individual_opinions.csv
docs/: architecture.md  djangoguide.md  endpoints.md  models.md
ingestion/: SC_case_ingest.ipynb  SLRI.ipynb  courts_data.ipynb  explore_wikipedia.ipynb  ingest_cases_opinions.py  ingest_courts_data.py  ingest_sc_cases.py  ingest_sc_judges.py  llm_processing.ipynb  merge_courts_data.py  prompt.txt  prompt_1.txt  ssc_elections_2026.csv
static/css/: main.css
templates/: analysis.html  base.html  dropdown.html  home.html  judges.html  judges_state_county.html  person.html  zip_judges.html
